# binary-insight

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts
docs/: architecture.md  contributing.md  scripting-api.md
scripts/: generate-icons.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  security.rs
src-tauri/src/ai/: mod.rs  ollama_client.rs  prompt_builder.rs
src-tauri/src/commands/: ai_commands.rs  export_commands.rs  file_commands.rs  mod.rs  network_commands.rs  script_commands.rs
src-tauri/src/core/: diff.rs  entropy.rs  file_reader.rs  hex_view.rs  magic_detector.rs  mod.rs
src-tauri/src/formats/: elf.rs  generic.rs  mod.rs  pe.rs  png.rs
src-tauri/src/network/: mod.rs  pcap_reader.rs  session.rs
src-tauri/src/scripting/: lua_runtime.rs  mod.rs  template_loader.rs
src-tauri/src/storage/: mod.rs
src-tauri/templates/: elf64.lua  generic_hex.lua  pe32.lua  png.lua
src/components/ai/: AIPanel.tsx  QueryBar.tsx  SuggestionBubble.tsx
src/components/hex/: AsciiPanel.tsx  HexCell.tsx  HexViewer.tsx  OffsetRuler.tsx
src/components/layout/: AnalyzerSidebar.tsx  StatusBar.tsx  TabBar.tsx
src/components/network/: FilterBar.tsx  FlowDiagram.tsx  PacketDetail.tsx  PacketList.tsx
src/hooks/: useAI.ts  useFileSession.ts  useHexSelection.ts  usePacketFilter.ts
src/lib/: colorMap.ts  formatters.ts  mockData.ts  tauri.ts
src/pages/: Index.tsx  Premium.tsx
src/store/: fileStore.ts  index.ts  networkStore.ts  uiStore.ts
(+8 files in other folders)
